--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -13,8 +13,8 @@
 
   <h1>Complete University Guide Overall Ranking</h1>
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
-
   <svg id="parallelChart" height="780" width="1800"></svg>
+  </div>
 
 </body>
 <script>
