--- a/views/guardianCareerProspects.ejs
+++ b/views/guardianCareerProspects.ejs
@@ -11,7 +11,8 @@
 
 <body>
 
-  <h1>Guardian Institution Ranking</h1>
+  <h1>Guardian Overall Ranking</h1>
+
   <div id="data" data-xaxis="<%= passedUniData %>">
   </div>
 
