--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>HomePage</title>
 </head>
 <body>
   <h1>UK University Ranking Data Comparison App</h1>
@@ -13,7 +13,7 @@
   <div id = buttons>
     <button><a href = "/parallelCoordinatesPlot">The Guardian Ranking Data</a></button>
     <button><a href = "/">The Times Ranking Data</a></button>
-    <button><a href = "/overall">The Complete University Guide Ranking Data</a></button>
+    <button><a href = "/overall">The Complete University Guide Ranking Data</a></button>    <button><a href = "/">Rankings Comparison</a></button>
   </div>
   
 </body>
