--- a/public/css/guardianDefault.css
+++ b/public/css/guardianDefault.css
@@ -8,6 +8,15 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  color: rgb(23, 117, 240);
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 40px;
+  letter-spacing: -1px;
+  line-height: 1;
+  text-align: center;
+}
+
 div.tooltip {	
   position: absolute;			
   text-align: center;			
