--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -11,10 +11,15 @@
 
 <body>
 
-  <h1>Guardian Institution Ranking</h1>
+  <h1>Guardian Overall Ranking</h1>
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
+  <div id="buttonPannel">
+    <button><a href="/careerprospects">Carrer Prospects</a></button>
+    <button><a href="/teachingScore">Average Teaching Scores</a></button>
+  </div>
+
 
 </body>
 <script>
