--- a/public/css/guardianParallelPlot.css
+++ b/public/css/guardianParallelPlot.css
@@ -33,11 +33,7 @@ div.tooltip {
   opacity: 0.3;
 }
 
-.selected {
-  stroke: rgb(240, 23, 23);
-  opacity: 1;
-  stroke-width: 5px;
-}
+
 
 #data{
   display: none;
@@ -50,9 +46,47 @@ div.tooltip {
   width: 50%;
 }
 
+.foreground {
+  fill: none;
+  stroke: steelblue;
+}
 
+.foreground .highlighted {
+  stroke: rgb(240, 23, 23);
+  fill: none;
+  opacity: 1;
+  stroke-width: 5px;
+}
+
+svg {
+  font: 10px sans-serif;
+}
+
+.background path {
+  fill: none;
+  stroke: #ddd;
+  shape-rendering: crispEdges;
+}
 
 .foreground path {
   fill: none;
   stroke: steelblue;
+}
+
+.brush .extent {
+  fill-opacity: .3;
+  stroke: #f6ff;
+  shape-rendering: crispEdges;
+}
+
+.axis line,
+.axis path {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.axis text {
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+  cursor: move;
 }
