--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="utf-8">
+<style>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= pageTitle %></title>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <link rel="stylesheet" href="/css/guardianParallelPlot.css">
-</head>
+</style>
+<script src="//d3js.org/d3.v3.min.js"></script>
+<link rel="stylesheet" href="/css/guardianParallelPlot.css">
 
 <body>
 
@@ -20,10 +17,11 @@
     <button><a href="/teachingScore">Average Teaching Scores</a></button>
   </div>
 
-
 </body>
-<script>
 
+
+
+<script>
 
   const dataDiv = document.querySelector('#data');
   let uniData = dataDiv.dataset.xaxis;
@@ -34,6 +32,23 @@
   const svgHeight = parseFloat(svg.attr('height'));
   const svgWidth = parseFloat(svg.attr('width'));
 
+  const margin = {
+    top: 25,
+    right: 0,
+    bottom: 10,
+    left: 0
+  }
+  const height = svgHeight - margin.top - margin.bottom;
+  const width = svgWidth - margin.left - margin.right;
+
+  let x = d3.scale.ordinal().rangePoints([0, width], 1);
+  let y = {};
+  let dragging = {};
+
+  let line = d3.svg.line();
+  let axis = d3.svg.axis().orient("left");
+  let background;
+  let foreground;
 
   //Create div for tooltip
   let div = d3.select("body").append("div")
@@ -42,125 +57,169 @@
 
   //Click Handler
   function handleClick(d, i) {
-    d3.select(this).classed("selected", !d3.select(this).classed("selected"));
+    d3.select(this).classed("highlighted", !d3.select(this).classed("highlighted"));
     console.log(d.class);
   }
 
-  const drawChart = (data) => {
+  const innerVis = svg.append('g')
+    .attr('transform', `translate(${margin.left}, ${margin.top})`);
 
-    d3.selectAll("#parallelChart > *").remove();
-
-    const margin = {
-      top: 25,
-      right: 0,
-      bottom: 10,
-      left: 0
+  let dimensions = d3.keys(data[0]).filter(function (d) {
+    if (d !== "name") {
+      return d
     }
-    const innerHeight = svgHeight - margin.top - margin.bottom;
-    const innerWidth = svgWidth - margin.left - margin.right;
-
-    const innerVis = svg.append('g')
-      .attr('transform', `translate(${margin.left}, ${margin.top})`);
+  });
 
 
-    // Extract the list of dimensions we want to keep in the plot, all except "name".
-    let dimensions = d3.keys(data[0]).filter(function (d) {
-      if (d !== "name") {
-        return d
-      }
+  // Extract the list of dimensions and create a scale for each.
+  x.domain(dimensions = d3.keys(uniData[0]).filter(function (dimension) {
+    let yRange = [height, 0];
+    if (dimension === "name") {
+      return false
+    }
+    if (dimension.includes("rank") || dimension.includes("ratio")) {
+      yRange = [0, height];
+    }
+    return (y[dimension] = d3.scale.linear()
+      .domain(d3.extent(uniData, function (value) {
+        if (value[dimension] == "") {
+          return null;
+        }
+        return +value[dimension];
+      }))
+      .range(yRange));
+  }));
+
+  // Add grey background lines for context.
+  background = innerVis.append("g")
+    .attr("class", "background")
+    .selectAll("path")
+    .data(uniData)
+    .enter()
+    .append("path")
+    .attr("d", path)
+    .on('click', handleClick)
+    .on("mouseover", function (d) {
+      div.transition()
+        .duration(200)
+        .style("opacity", .9);
+      div.html(d.name)
+        .style("left", (d3.event.pageX) + "px")
+        .style("top", (d3.event.pageY - 28) + "px");
+    })
+    .on("mouseout", function (d) {
+      div.transition()
+        .duration(500)
+        .style("opacity", 0);
     });
 
-    // Build the X scale -> it find the best position for each Y axis
-    //Equally spacing for an ordinal X axis. 
-    //Remember range is screen space, domain is data space.
-    const xScale = d3.scalePoint()
-      .range([0, innerWidth])
-      .padding(1)
-      .domain(dimensions);
+  // Add blue foreground lines for focus.
+  foreground = innerVis.append("g")
+    .attr("class", "foreground")
+    .selectAll("path")
+    .data(uniData)
+    .enter()
+    .append("path")
+    .attr("d", path)
+    .on('click', handleClick)
+    .on("mouseover", function (d) {
+      div.transition()
+        .duration(200)
+        .style("opacity", .9);
+      div.html(d.name)
+        .style("left", (d3.event.pageX) + "px")
+        .style("top", (d3.event.pageY - 28) + "px");
+    })
+    .on("mouseout", function (d) {
+      div.transition()
+        .duration(500)
+        .style("opacity", 0);
+    });
 
-    // For each dimension, I build a linear scale. I store all in a y object
-    //essentially an empty object, iterates throught dimensions which is an object that contains attributes, these attriubtes are key value pairings
-    //where the key is just numbers 0-10, and the values are the string values for each column in the uni ranking table.
-    //so below, we a creating an empty object y.
-    //iterate through dimensions object, forEach attribute in dimensions, create a linear scale from min-max values of that column variable.
-    let yScale = {}
-    for (i in dimensions) {
-      metricName = dimensions[i]
-      let yRange = [innerHeight, 0];
-      if (metricName.includes("rank") || metricName.includes("ratio")) {
-        yRange = [0, innerHeight]
-      }
-      yScale[metricName] = d3.scaleLinear()
-        .domain(d3.extent(data, function (d) {
-          if (d[metricName] == "") { return null }
-          return d[metricName];
-        }))
-        .range(yRange)
-    };
 
-    // Draw the axis:
-    innerVis.selectAll("axis")
-      // For each dimension of the dataset, add a group element:
-      .data(dimensions)
-      .enter()
-      .append("g")
-      // Translate this element to its right position on the x axis
-      .attr("transform", function (d) { return "translate(" + xScale(d) + ")"; })
-      // Build the axis with the call function
-      .each(function (d) { d3.select(this).call(d3.axisLeft().scale(yScale[d])); })
-      // Add axis title
-      .append("text")
-      .style("text-anchor", "middle")
-      .attr("y", -10)
-      .text(function (d) { return d; })
-      .style("fill", "black")
-
-    // The path function take a row of DB input, and return x and y coordinates of the line to draw for this raw.
-    function path(d) {
-      return d3.line()
-        .defined(function (d) { return d[1] != null; })
-        (dimensions.map(function (column) {
-          if (d[column] === "") {
-            return [xScale(column, null)]
-          }
-          return [xScale(column), yScale[column](d[column])];
-        }));
-    }
-
-    let linesG = innerVis
-      .selectAll('myPath')
-      .data(data);
-
-    // Draw the lines
-    linesG
-      .enter()
-      .append("path")
-      .merge(linesG)
-      .attr("d", path)
-      // .style("fill", "none")
-      .attr("class", "unSelected")
-      // .style("opacity", 0.3)
-      .on('click', handleClick)
-      .on("mouseover", function (d) {
-        div.transition()
-          .duration(200)
-          .style("opacity", .9);
-        div.html(d.name)
-          .style("left", (d3.event.pageX) + "px")
-          .style("top", (d3.event.pageY - 28) + "px");
+  // Add a group element for each dimension.
+  let g = innerVis.selectAll(".dimension")
+    .data(dimensions)
+    .enter().append("g")
+    .attr("class", "dimension")
+    .attr("transform", function (d) { return "translate(" + x(d) + ")"; })
+    .call(d3.behavior.drag()
+      .origin(function (d) { return { x: x(d) }; })
+      .on("dragstart", function (d) {
+        dragging[d] = x(d);
+        background.attr("visibility", "hidden");
       })
-      .on("mouseout", function (d) {
-        div.transition()
-          .duration(500)
-          .style("opacity", 0);
-      });
+      .on("drag", function (d) {
+        dragging[d] = Math.min(width, Math.max(0, d3.event.x));
+        foreground.attr("d", path);
+        dimensions.sort(function (a, b) { return position(a) - position(b); });
+        x.domain(dimensions);
+        g.attr("transform", function (d) { return "translate(" + position(d) + ")"; })
+      })
+      .on("dragend", function (d) {
+        delete dragging[d];
+        transition(d3.select(this)).attr("transform", "translate(" + x(d) + ")");
+        transition(foreground).attr("d", path);
+        background
+          .attr("d", path)
+          .transition()
+          .delay(500)
+          .duration(0)
+          .attr("visibility", null);
+      }));
 
-    linesG
-      .exit()
-      .remove();
+  // Add an axis and title.
+  g.append("g")
+    .attr("class", "axis")
+    .each(function (d) { d3.select(this).call(axis.scale(y[d])); })
+    .append("text")
+    .style("text-anchor", "middle")
+    .attr("y", -9)
+    .text(function (d) { return d; });
+
+  // Add and store a brush for each axis.
+  g.append("g")
+    .attr("class", "brush")
+    .each(function (d) {
+      d3.select(this).call(y[d].brush = d3.svg.brush().y(y[d]).on("brushstart", brushstart).on("brush", brush));
+    })
+    .selectAll("rect")
+    .attr("x", -8)
+    .attr("width", 16);
+
+  function position(d) {
+    let v = dragging[d];
+    return v == null ? x(d) : v;
   }
-  drawChart(uniData);
+
+  function transition(g) {
+    return g.transition().duration(500);
+  }
+
+  // Returns the path for a given data point.
+  function path(d) {
+    return line.defined(function (d) { return d[1] != null; })(dimensions.map(function (p) {
+
+      if (d[p] === "") {
+        return [position(p, null)];
+      }
+      return [position(p), y[p](d[p])];
+    }))
+  }
+
+  function brushstart() {
+    d3.event.sourceEvent.stopPropagation();
+  }
+
+  // Handles a brush event, toggling the display of foreground lines.
+  function brush() {
+    let actives = dimensions.filter(function (p) { return !y[p].brush.empty(); }),
+      extents = actives.map(function (p) { return y[p].brush.extent(); });
+    foreground.style("display", function (d) {
+      return actives.every(function (p, i) {
+        return extents[i][0] <= d[p] && d[p] <= extents[i][1];
+      }) ? null : "none";
+    });
+  }
 
 </script>
-
-</html>
