--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -8,7 +8,7 @@
 
 <body>
 
-  <h1>Guardian Overall Ranking</h1>
+  <h1><span id="providerTitle">The Guardian </span>Overall Ranking</h1>
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
