times PCP implemented

--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
   <script src="//d3js.org/d3.v3.min.js"></script>
-  <link rel="stylesheet" href="/css/completeUniParallelPlot.css">
+  <link rel="stylesheet" href="/css/timesParallelPlot.css">
 </head>
 
 <body>
-  <h1><span id="providerTitle">The Complete University Guide </span>Overall Ranking</h1>
+  <h1><span id="providerTitle">The Sunday Times </span>Overall Ranking</h1>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
 
@@ -221,3 +221,4 @@
   }
 </script>
 
+</html>
