--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,9 +11,9 @@
   <p>Select which university league tables you wish to view or select a comparison overview of all three league tables.</p>
 
   <div id = buttons>
-    <button><a href = "/parallelCoordinatesPlot">The Guardian Ranking Data</a></button>
-    <button><a href = "/">The Times Ranking Data</a></button>
-    <button><a href = "/overall">The Complete University Guide Ranking Data</a></button>    <button><a href = "/">Rankings Comparison</a></button>
+    <button><a href = "/guardianPCP">The Guardian Ranking Data</a></button>
+    <button><a href = "/timesPCP">The Times Ranking Data</a></button>
+    <button><a href = "/completeUniPCP">The Complete University Guide Ranking Data</a></button>    <button><a href = "/">Rankings Comparison</a></button>
   </div>
   
 </body>
