--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<html lang="en">
 
-</style>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<link rel="stylesheet" href="/css/guardianParallelPlot.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= pageTitle %></title>
+  <script src="//d3js.org/d3.v3.min.js"></script>
+  <link rel="stylesheet" href="/css/timesParallelPlot.css">
+</head>
 
 <body>
-
-  <h1><span id="providerTitle">The Guardian </span>Overall Ranking</h1>
-  <div id="data" data-xaxis="<%= passedUniData %>"></div>
+  <h1><span id="providerTitle">The Sunday Times </span>Overall Ranking</h1>
 
   <svg id="parallelChart" height="780" width="1800"></svg>
+
   <div id="buttonPannel">
     <button><a href="/careerprospects">Carrer Prospects</a></button>
     <button><a href="/teachingScore">Average Teaching Scores</a></button>
   </div>
 
+  <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
 
-
-
 <script>
-
+  //Obtain data from #data div
   const dataDiv = document.querySelector('#data');
   let uniData = dataDiv.dataset.xaxis;
-  uniData = JSON.parse(uniData); // Need to convert from JSON obj to String to manipulate the array of uniData objects.
+  uniData = JSON.parse(uniData);
 
+  //set SVG selection & get SVG dimensions
   const svg = d3.select('#parallelChart');
-
   const svgHeight = parseFloat(svg.attr('height'));
   const svgWidth = parseFloat(svg.attr('width'));
 
+  // set InnerVis dimensions
   const margin = {
     top: 25,
     right: 0,
@@ -41,14 +43,9 @@
   const height = svgHeight - margin.top - margin.bottom;
   const width = svgWidth - margin.left - margin.right;
 
-  let x = d3.scale.ordinal().rangePoints([0, width], 1);
-  let y = {};
-  let dragging = {};
-
-  let line = d3.svg.line();
-  let axis = d3.svg.axis().orient("left");
-  let background;
-  let foreground;
+  //Move innerVis by top & left margin
+  const innerVis = svg.append('g')
+    .attr('transform', `translate(${margin.left}, ${margin.top})`);
 
   //Create div for tooltip
   let div = d3.select("body")
@@ -62,15 +59,15 @@
     console.log(d.class);
   }
 
-  const innerVis = svg.append('g')
-    .attr('transform', `translate(${margin.left}, ${margin.top})`);
+  //Helper objects used to make code more ledgible & easier to maintain
+  let x = d3.scale.ordinal().rangePoints([0, width], 1);
+  let y = {};
+  let dragging = {};
 
-  let dimensions = d3.keys(data[0]).filter(function (d) {
-    if (d !== "name") {
-      return d
-    }
-  });
-
+  let line = d3.svg.line();
+  let axis = d3.svg.axis().orient("left");
+  let background;
+  let foreground;
 
   // Extract the list of dimensions and create a scale for each.
   x.domain(dimensions = d3.keys(uniData[0]).filter(function (dimension) {
@@ -91,7 +88,7 @@
       .range(yRange));
   }));
 
-  // Add grey background lines for context.
+  // Draw background Lines
   background = innerVis.append("g")
     .attr("class", "background")
     .selectAll("path")
@@ -114,7 +111,7 @@
         .style("opacity", 0);
     });
 
-  // Add blue foreground lines for focus.
+  // Draw foreground Lines
   foreground = innerVis.append("g")
     .attr("class", "foreground")
     .selectAll("path")
@@ -137,8 +134,7 @@
         .style("opacity", 0);
     });
 
-
-  // Add a group element for each dimension.
+  // For each dimension create a group element which contains drag & drop functionality
   let g = innerVis.selectAll(".dimension")
     .data(dimensions)
     .enter().append("g")
@@ -169,7 +165,7 @@
           .attr("visibility", null);
       }));
 
-  // Add an axis and title.
+  //Adds a group to draw scale and title
   g.append("g")
     .attr("class", "axis")
     .each(function (d) { d3.select(this).call(axis.scale(y[d])); })
@@ -178,7 +174,7 @@
     .attr("y", -9)
     .text(function (d) { return d; });
 
-  // Add and store a brush for each axis.
+  //Adds a group to add and store a brush for each scale.
   g.append("g")
     .attr("class", "brush")
     .each(function (d) {
@@ -192,12 +188,12 @@
     let v = dragging[d];
     return v == null ? x(d) : v;
   }
-
+  //Returns animated 0.5sec transition for a given selection
   function transition(g) {
     return g.transition().duration(500);
   }
 
-  // Returns the path for a given data point.
+  //Returns path coordinates along each scale for each data item
   function path(d) {
     return line.defined(function (d) { return d[1] != null; })(dimensions.map(function (p) {
 
@@ -208,6 +204,7 @@
     }))
   }
 
+  //Ensures that a mousedown event is not followed by a click event so the Onclick listner is not invoked
   function brushstart() {
     d3.event.sourceEvent.stopPropagation();
   }
@@ -222,16 +219,6 @@
       }) ? null : "none";
     });
   }
-
-  // Handles a brush event, toggling the display of foreground lines.
-  function brush() {
-    let actives = dimensions.filter(function (p) { return !y[p].brush.empty(); }),
-      extents = actives.map(function (p) { return y[p].brush.extent(); });
-    foreground.style("display", function (d) {
-      return actives.every(function (p, i) {
-        return extents[i][0] <= d[p] && d[p] <= extents[i][1];
-      }) ? null : "none";
-    });
-  }
-
 </script>
+
+</html>
