--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -15,8 +15,8 @@
   <svg id="parallelChart" height="780" width="1800"></svg>
 
   <div id="buttonPannel">
-    <button><a href="/careerprospects">Carrer Prospects</a></button>
-    <button><a href="/teachingScore">Average Teaching Scores</a></button>
+    <button><a href="/guardianBar">Carrer Prospects</a></button>
+    <button><a href="/guardianBar">Average Teaching Scores</a></button>
   </div>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
@@ -28,12 +28,12 @@
   let uniData = dataDiv.dataset.xaxis;
   uniData = JSON.parse(uniData);
 
-  //set SVG selection & get SVG dimensions
+  //set SVG selection & get SVG height & width
   const svg = d3.select('#parallelChart');
   const svgHeight = parseFloat(svg.attr('height'));
   const svgWidth = parseFloat(svg.attr('width'));
 
-  // set InnerVis dimensions
+  // set InnerVis height & width
   const margin = {
     top: 25,
     right: 0,
