--- a/views/guardianMetricBarCharts.ejs
+++ b/views/guardianMetricBarCharts.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>Guardian Ranking by Individual Scoring Metric</h1>
+  <h1><span id="providerTitle">The Guardian</span> Ranking by Individual Scoring Metric</h1>
 
   <div id="menus">
     <label for="metricMenu">Select Scoring Metric:</label>
