--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -13,8 +13,7 @@
 
   <svg id="parallelChart" height="780" width="1800"></svg>
   <div id="buttonPannel">
-    <button><a href="/careerprospects">Carrer Prospects</a></button>
-    <button><a href="/teachingScore">Average Teaching Scores</a></button>
+    <button><a href="/completeUniBar">View Metrics in Detail</a></button>
   </div>
 
 </body>
