--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -15,8 +15,7 @@
   <svg id="parallelChart" height="780" width="1800"></svg>
 
   <div id="buttonPannel">
-    <button><a href="/careerprospects">Carrer Prospects</a></button>
-    <button><a href="/teachingScore">Average Teaching Scores</a></button>
+    <button><a href="/guardianBar">View Metrics in Detail</a></button>
   </div>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
