--- a/views/comparisonGuardian.ejs
+++ b/views/comparisonGuardian.ejs
@@ -110,7 +110,7 @@
   }
   function deletePreviousChart() {
     svg.selectAll(".completeUni").remove();
-    svg.selectAll(".foreground").remove();
+    svg.selectAll(".guardian").remove();
     svg.selectAll(".dimension").remove();
   }
 
@@ -172,8 +172,8 @@
     //   });
 
     // Draw foreground Lines
-    foreground = innerVis.append("g")
-      .attr("class", "foreground")
+    guardianLines = innerVis.append("g")
+      .attr("class", "guardian")
       .selectAll("path")
       .data(selectedRow)
       .enter()
@@ -194,8 +194,6 @@
           .style("opacity", 0);
       });
 
-    // foreground.selectAll("path").data(selectedRow, function(d) { return d.name}).update().remove();
-
     // For each dimension create a group element which contains drag & drop functionality
     let g = innerVis.selectAll(".dimension")
       .data(dimensions)
@@ -211,7 +209,7 @@
         })
         .on("drag", function (d) {
           dragging[d] = Math.min(width, Math.max(0, d3.event.x));
-          foreground.attr("d", path);
+          guardianLines.attr("d", path);
           dimensions.sort(function (a, b) { return position(a) - position(b); });
           x.domain(dimensions);
           g.attr("transform", function (d) { return "translate(" + position(d) + ")"; })
@@ -219,7 +217,7 @@
         .on("dragend", function (d) {
           delete dragging[d];
           transition(d3.select(this)).attr("transform", "translate(" + x(d) + ")");
-          transition(foreground).attr("d", path);
+          transition(guardianLines).attr("d", path);
         }));
 
 
@@ -273,7 +271,7 @@
     function brush() {
       let actives = dimensions.filter(function (p) { return !y[p].brush.empty(); }),
         extents = actives.map(function (p) { return y[p].brush.extent(); });
-      foreground.style("display", function (d) {
+      guardianLines.style("display", function (d) {
         return actives.every(function (p, i) {
           return extents[i][0] <= d[p] && d[p] <= extents[i][1];
         }) ? null : "none";
